# rtsp-proxy-server

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  viewer.html
.github/: copilot-instructions.md
examples/: hikvision-player.html
src/: main.rs  rtsp_client.rs  stream_manager.rs  streaming_server.rs
